Updating melanobs presentation

--- a/melanobs-fcc-carbon-biodiversity-data/doc_prefix.tex
+++ b/melanobs-fcc-carbon-biodiversity-data/doc_prefix.tex
@@ -27,7 +27,8 @@
     
     \includegraphics[width=10cm]{figs/Banniere}
     
-    \small{Ghislain VIEILLEDENT$^{1}$\hspace{0.25cm}Philippe BIRNBAUM$^{1}$\hspace{0.25cm}Thomas IBANEZ$^{2}$}
+    \small{Ghislain VIEILLEDENT$^{1}$\hspace{0.25cm}Philippe BIRNBAUM$^{1}$\\
+      \vspace{0.10cm}David BRUY$^{2}$\hspace{0.25cm}Thomas IBANEZ$^{2}$}
       
     \vspace{0.25cm}
     
