--- a/melanobs-fcc-carbon-biodiversity-data/doc_suffix.tex
+++ b/melanobs-fcc-carbon-biodiversity-data/doc_suffix.tex
@@ -13,7 +13,7 @@
     \begin{block}{}
       \begin{center}
         \ldots~Thank you for attention~\ldots \\
-        \url{https://ecology.ghislainv.fr/presentations.html} \\
+        \url{https://ecology.ghislainv.fr/presentations} \\
         \includegraphics[width=0.8\textwidth]{figs/partners_logos}
       \end{center}
     \end{block}
